# eon_project

./: .gitignore  CMakeLists.txt  README.md  cppman.sh  start.sh
assets/: bitrate.json
assets/POL12/json_data/: pol12net.json  pol12pat.json
assets/US26/json_data/: us26net.json
assets/utils/: data2json  net_to_json.py  path_to_json.py  pol12.json  us26.json
lib/: simulator.hpp
src/: algorithms.cpp  main.cpp  pol12net.json  pol12pat.json  utils.cpp
test_data/: ex.txt
